Fix alignment by wrapping

--- a/ch03-box-model/style.css
+++ b/ch03-box-model/style.css
@@ -23,6 +23,11 @@ main {
   display: block;
 }
 
+.wrapper {
+  margin-left: -1.5em;
+  margin-right: -1.5em;
+}
+
 .container {
   display: table;
   width: 100%;
